--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+  <title>LABs</title>
+ </head>
+ <body>
+  <h1>Лабы</h1>
+  <ul>
+    <li><a href = "laba1/index.html">Лаба 1 </a></li>
+  </ul>
+ </body>
+</html>
