--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <li><a href = "laba1/index.html">Лаба 1 </a></li>
     <li><a href = "laba2/6_lab_EVT.html">Лаба 2 </a></li>
     <li><a href = "laba3/EVT_lab7.html">Лаба 3 </a></li>
-    <li><a href = "laba3-dop/index.html">Лаба 3 </a></li>
+    <li><a href = "lab3-dop/index.html">Лаба 3 доп </a></li>
   </ul>
  </body>
 </html>
