--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <li><a href = "laba2/6_lab_EVT.html">Лаба 2 </a></li>
     <li><a href = "laba3/EVT_lab7.html">Лаба 3 </a></li>
     <li><a href = "lab3-dop/index.html">Лаба 3 доп </a></li>
+     <li><a href = "laba4/EVT_lab8.html">Лаба 4 </a></li>
+     <li><a href = "laba4-dop/LABA4-DOP.html">Лаба 4 </a></li>
   </ul>
  </body>
 </html>
